Make this public

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Prism Extract - Color Extraction & CSS Gradient Generator</title>
+    <meta name="description" content="Extract dominant colors from images and create beautiful CSS gradients. Upload any image and generate custom linear gradients with precise color control." />
+    <meta name="keywords" content="color extraction, CSS gradients, image colors, color palette, gradient generator, web design tools" />
+    <meta name="author" content="Prism Extract" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Prism Extract - Color Extraction & CSS Gradient Generator" />
+    <meta property="og:description" content="Extract dominant colors from images and create beautiful CSS gradients. Upload any image and generate custom linear gradients with precise color control." />
+    <meta property="og:image" content="https://prismextract.isuru.info/og_image.png" />
+    <meta property="og:url" content="https://prismextract.isuru.info" />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Prism Extract - Color Extraction & CSS Gradient Generator" />
+    <meta property="twitter:description" content="Extract dominant colors from images and create beautiful CSS gradients. Upload any image and generate custom linear gradients with precise color control." />
+    <meta property="twitter:image" content="https://prismextract.isuru.info/og_image.png" />
   </head>
   <body class="dark:bg-gray-900">
     <div id="root"></div>
